--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
+<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.4.1/slick.css"/>
+<!--<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.4.1/slick-theme.css"/>-->
+<link rel="stylesheet" type="text/css" href="css/style.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.4.1/slick.min.js"></script>
+<script src="js/functions.js"></script>
 
+        
+        
+        <div class="slider" id="featured-content">
+         <div>
+            <a href="#">
+               <figure class="thumbnail ratio-16by9"><img src="http://dummyimage.com/464x16:9/3498db/fff.gif" alt=""></figure>
+               <h2>[#1]The greatest breakthroughs in gaming history of the past 25 years</h2>
+            </a>
+         </div>
+         <div>
+            <a href="#">
+               <figure class="thumbnail ratio-16by9"><img src="http://dummyimage.com/464x16:9/3498db/fff.gif" alt=""></figure>
+               <h2>Best game reboots</h2>
+            </a>
+         </div>
+         <div>
+            <a href="#">
+               <figure class="thumbnail ratio-16by9"><img src="http://dummyimage.com/464x16:9/3498db/fff.gif" alt=""></figure>
+               <h2>[#3]The greatest breakthroughs</h2>
+            </a>
+         </div>
+         <div>
+            <a href="#">
+               <figure class="thumbnail ratio-16by9"><img src="http://dummyimage.com/464x16:9/3498db/fff.gif" alt=""></figure>
+               <h2>[#4]The greatest breakthroughs</h2>
+            </a>
+         </div>
+         <div>
+            <a href="#">
+               <figure class="thumbnail ratio-16by9"><img src="http://dummyimage.com/464x16:9/3498db/fff.gif" alt=""></figure>
+               <h2>[#5]The greatest breakthroughs in gaming</h2>
+            </a>
+         </div>
+         <div>
+            <a href="#">
+               <figure class="thumbnail ratio-16by9"><img src="http://dummyimage.com/464x16:9/3498db/fff.gif" alt=""></figure>
+               <h2>[#6]The greatest breakthroughs in gaming history of</h2>
+            </a>
+         </div>
+         <div>
+            <a href="#">
+               <figure class="thumbnail ratio-16by9"><img src="http://dummyimage.com/464x16:9/3498db/fff.gif" alt=""></figure>
+               <h2>[#7]The greatest breakthroughs in gaming history of the past</h2>
+            </a>
+         </div>
+         <div>
+            <a href="#">
+               <figure class="thumbnail ratio-16by9"><img src="http://dummyimage.com/464x16:9/3498db/fff.gif" alt=""></figure>
+               <h2>[#8]The greatest breakthroughs in gaming history of the past 25 years</h2>
+            </a>
+         </div>
+         <div>
+            <a href="#">
+               <figure class="thumbnail ratio-16by9"><img src="http://dummyimage.com/464x16:9/3498db/fff.gif" alt=""></figure>
+               <h2>[#9]The greatest breakthroughs in gaming history of the past 25 years</h2>
+            </a>
+         </div>
+      </div>
